kubernetes/apps/base/example-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  namespace: example-app
spec:
  selector:
    matchLabels:
      app: example-app
  replicas: 1
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: example-app
        image: publictransport/example-deployment:5c06d9e # {"$imagepolicy": "flux-system:example-app"}
        ports:
        - containerPort: 3000
