kubernetes/apps/base/example-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: example-app
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: example-app
